fix add to cart button on mobile

--- a/techTop/css/index-rtl.css
+++ b/techTop/css/index-rtl.css
@@ -9639,7 +9639,10 @@ h1 .number-result {
     margin: 0;
     text-align: center; }
   .main-navbar.navbar .navbar-end-menu li:hover .navbar-end-menu__sub-cart {
-    display: none; } }
+    display: none; } 
+  .catalog-products-list .catalog-products-item .item-wrap .item-img .btn-group {
+      opacity: 1;
+      transform: scale(1); }}
 
 @media screen and (max-width: 991px) {
   footer .columns {
